--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -52,7 +52,9 @@ jobs:
         env:
           ANDROID_KEYSTORE_PASSWORD: ${{secrets.ANDROID_KEYSTORE_PASSWORD}}
           ANDROID_KEY_PASSWORD: ${{secrets.ANDROID_KEY_PASSWORD}}
+        working-directory: fastlane
 
       - name: Build bundle
         if: github.event_name == 'pull_request'
         run: bundle exec fastlane build
+        working-directory: fastlane
