feat: update domain

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kiel-live/app",
-  "author": "kiel-live.github.io Team",
+  "author": "Kiel-Live Team",
   "version": "0.0.0",
   "type": "module",
   "engines": {
