--- a/android-app/app/build.gradle
+++ b/android-app/app/build.gradle
@@ -6,11 +6,11 @@ android {
         applicationId "de.beechy.kiellive"
         minSdkVersion 23
         targetSdkVersion 36
-        versionCode 172
-        versionName "1.7.2"
+        versionCode 173
+        versionName "1.7.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [
-            hostName: "kiel-live.github.io"
+            hostName: "kiel.flott-live.de"
         ]
     }
     buildTypes {
